<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="#F37C78">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coins"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@drawable/shape_text"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/arizonia"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/shape_text"
        android:fontFamily="@font/arizonia"
        android:gravity="center"
        android:text="number"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/Linear_Layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/dice_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/dice_image2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1"
            android:textSize="30sp"


            />


        <ImageView
            android:id="@+id/dice_image3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/dice_image4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1"
            android:textSize="30sp"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/Linear_Layout1"
        >


        <ImageView
            android:id="@+id/dice_image5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/dice_image6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1"
            android:textSize="30sp"


            />


        <ImageView
            android:id="@+id/dice_image7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/dice_image8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1"
            android:textSize="30sp"

            />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_text"
        android:fontFamily="@font/arizonia"
        android:gravity="center"
        android:text="@string/sum"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_above="@+id/btn_roll"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        />


    <Button
        android:id="@+id/btn_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/arizonia"
        android:text="@string/roll"
        android:textColor="#FDF8F8"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />

</RelativeLayout>